--- a/CyberInsightDataGenerator.ipynb
+++ b/CyberInsightDataGenerator.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOS7+np750iDB55U+OtLUn6",
+      "authorship_tag": "ABX9TyNcy4pD3AhI+5NDi0s7NfTy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,18 @@
         "    *   The `save_the_data_to_CSV_to_google_drive` method calls the single-save method for all the generated DataFrames.\n",
         "\n",
         "*   **`DataDisplay`**: This class provides functionality to display information about the generated DataFrames.\n",
-        "    *   The `display_the_data_frames` method uses `display()` to show the head, info, and describe outputs for each generated DataFrame, allowing for a quick overview of the data structure and statistics.\n",
+        "    *   The `display_the_data_frames` method uses `display()` to show the head, info, and describe outputs for each generated DataFrame, allowing for a quick overview of the data structure and statistics.  \n",
+        "    *   Display Plottings  \n",
+        "        1. Descriptive Statistics\n",
+        "           Computes summary statistics (.describe()).\n",
+        "           Detects categorical vs numerical features.\n",
+        "           Highlights distributions, outliers, and correlations.  \n",
+        "        📌 The core of classical EDA, enabling users to spot anomalies and trends.\n",
+        "\n",
+        "        2. Visualization\n",
+        "            Plots histograms, correlation heatmaps, and categorical distributions.\n",
+        "            Supports matplotlib and seaborn for visual clarity.  \n",
+        "        📌 Visual EDA complements numerical summaries by revealing hidden structures.\n",
         "\n",
         "## How to Use the Script\n",
         "\n",
