--- a/CyberInsightDataGenerator.ipynb
+++ b/CyberInsightDataGenerator.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNd9q69UtyvStr58H19epQC",
+      "authorship_tag": "ABX9TyMe3Ivr190CAPIf4JEmKvvA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "Anomalous Behavior Detection in Cybersecurity Analytics using Generative AI  \n",
         "\n",
         "**Toronto, September 01 2025**  \n",
-        "**Autor : Atsu Vovor**\n",
+        "**Author : Atsu Vovor**\n",
         ">Master of Management in Artificial Intelligence    \n",
         ">Consultant Data Analytics Specialist | Machine Learning |  \n",
         "Data science | Quantitative Analysis |French & English Bilingual  \n",
